# testdrive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
cmake/: CompilerConfig.cmake  fetch_third_party_libraries.cmake
shader/: fragment.glsl  vertex.glsl
testdrive/: CMakeLists.txt  camera.cpp  camera.h  consts.h  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  utils.cpp  utils.h  vector.cpp  vector.h  window.cpp  window.h
